force-app/main/default/objects/Volunteer_Shift_Attendance__c/Volunteer_Shift_Attendance__c.object-meta.xml
<CustomObject>
    <label>Volunteer Shift Attendance</label>
    <nameField>
        <displayFormat>VSA ID-{0000000}</displayFormat>
        <label>Volunteer Shift Att ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Shift Attendance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>