force-app/main/default/objects/Volunteer_Shift_Attendance__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Volunteer Shift Attendance</relationshipLabel>
    <relationshipName>Volunteer_Shift_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>