force-app/main/default/objects/Volunteer_Shift_Attendance__c/fields/Actiivity__c.field-meta.xml
<CustomField>
    <fullName>Actiivity__c</fullName>
    <description>Description of the work performed during the shift</description>
    <label>Actiivity</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>