force-app/main/default/objects/Volunteer_Shift_Attendance__c/fields/Agency_Organization__c.field-meta.xml
<CustomField>
    <fullName>Agency_Organization__c</fullName>
    <description>The partner organization name (for redundancy; parent Campaign will link as well)</description>
    <label>Agency Organization</label>
    <type>TextArea</type>
</CustomField>