force-app/main/default/objects/Volunteer_Shift_Attendance__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Volunteer Shift Attendance</relationshipLabel>
    <relationshipName>Volunteer_Shift_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>