force-app/main/default/objects/Volunteer_Shift_Attendance__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>General type of volunteer work (e.g., Medical, Cleanup, Logistics)</description>
    <label>Category</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>