force-app/main/default/objects/Volunteer_Shift_Attendance__c/fields/Date_In__c.field-meta.xml
<CustomField>
    <fullName>Date_In__c</fullName>
    <description>The date the volunteer started the shift</description>
    <label>Date In</label>
    <type>Date</type>
</CustomField>