force-app/main/default/objects/Volunteer_Shift_Attendance__c/fields/Date_Out__c.field-meta.xml
<CustomField>
    <fullName>Date_Out__c</fullName>
    <description>Date when the volunteer ended the shift</description>
    <label>Date Out</label>
    <type>Date</type>
</CustomField>