force-app/main/default/objects/Volunteer_Shift_Attendance__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <defaultValue>&quot;Volunteer&quot;</defaultValue>
    <label>Position</label>
    <length>150</length>
    <type>Text</type>
</CustomField>