force-app/main/default/objects/Volunteer_Shift_Attendance__c/fields/Time_In__c.field-meta.xml
<CustomField>
    <fullName>Time_In__c</fullName>
    <description>Volunteer start time of the shift</description>
    <label>Time In</label>
    <type>Time</type>
</CustomField>