force-app/main/default/objects/Volunteer_Shift_Attendance__c/fields/Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Time_Out__c</fullName>
    <description>Volunteer End time of the shift</description>
    <label>Time Out</label>
    <type>Time</type>
</CustomField>