force-app/main/default/objects/Volunteer_Shift_Attendance__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <formula>IF( Hours__c &gt; 0 ,  Hours__c , IF(
  AND(
    NOT(ISBLANK(Date_In__c)),
    NOT(ISBLANK(Time_In__c)),
    NOT(ISBLANK(Date_Out__c)),
    NOT(ISBLANK(Time_Out__c))
  ),
  (
    (DATETIMEVALUE(Date_Out__c) + (VALUE(MID(TEXT(Time_Out__c), 1, 2)) + VALUE(MID(TEXT(Time_Out__c), 4, 2)) / 60) / 24) -
    (DATETIMEVALUE(Date_In__c) + (VALUE(MID(TEXT(Time_In__c), 1, 2)) + VALUE(MID(TEXT(Time_In__c), 4, 2)) / 60) / 24)
  ) * 24,
  0
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>