force-app/main/default/objects/Volunteer_Shift_Attendance__c/fields/Volunteer_Name__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Name__c</fullName>
    <description>Name of the volunteer (optional or masked if not storing PII)</description>
    <label>Volunteer Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>