force-app/main/default/objects/Volunteer_Shift_Attendance__c/fields/Volunteer_Shift_Report__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Shift_Report__c</fullName>
    <description>Links this record to the report</description>
    <label>Volunteer Shift Report</label>
    <referenceTo>Volunteer_Shift_Report__c</referenceTo>
    <relationshipLabel>Volunteer Shift Attendance</relationshipLabel>
    <relationshipName>Volunteer_Shift_Attendance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>