force-app/main/default/objects/Volunteer_Shift_Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Volunteer_Name__c</columns>
    <columns>Agency_Organization__c</columns>
    <columns>Total_Hours__c</columns>
    <columns>Actiivity__c</columns>
    <columns>Date_In__c</columns>
    <columns>Time_In__c</columns>
    <columns>Time_Out__c</columns>
    <columns>Volunteer_Shift_Report__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>