force-app/main/default/objects/Volunteer_Shift_Attendance__c/listViews/All_Actual_Reports.listView-meta.xml
<ListView>
    <fullName>All_Actual_Reports</fullName>
    <columns>Campaign__c</columns>
    <columns>NAME</columns>
    <columns>Volunteer_Name__c</columns>
    <columns>Agency_Organization__c</columns>
    <columns>Total_Hours__c</columns>
    <columns>Actiivity__c</columns>
    <columns>Date_In__c</columns>
    <columns>Time_In__c</columns>
    <columns>Time_Out__c</columns>
    <columns>Volunteer_Shift_Report__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>notEqual</operation>
        <value>City-Test-STL-Recovers-Volunteer-Reports</value>
    </filters>
    <label>All Actual Reports</label>
</ListView>